--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "Let's consider two events: event $M$ means throwing a 6, event $N$ means that you throw an odd number $N={1,3,5}$. These events are exclusive, and you can use the additivity rule if you want to know the answer to the question: \n",
     "\n",
-    "*\"what is the probability that your outcome will be a 6, or ann odd number?\"*\n",
+    "*\"what is the probability that your outcome will be a 6, or an odd number?\"*\n",
     "\n",
     "$P(M\\cup N) = P(M) + P(N) = \\dfrac{1}{6}+\\dfrac{3}{6}=\\dfrac{4}{6} $ \n",
     "\n",
@@ -135,6 +135,13 @@
     "\n",
     "Well done! In this section, you learned how to use sets to get to probabilities. You learned about experiments, event spaces and outcomes. Next, you learned about the law of relative frequency and how it can be used to calculate probabilities, along with the three probability axioms."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -153,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
